--- a/src/app/pages/home/components/event-grid/components/event-card/event-card.component.html
+++ b/src/app/pages/home/components/event-grid/components/event-card/event-card.component.html
@@ -1,4 +1,6 @@
-<div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
+<div
+  class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hover:shadow-lg hover:scale-105 cursor-pointer transition-transform duration-300"
+>
   <img
     class="rounded-t-lg w-full h-48 object-cover"
     [src]="event.image"
