--- a/src/app/pages/home/components/event-grid/event-grid.component.html
+++ b/src/app/pages/home/components/event-grid/event-grid.component.html
@@ -1,5 +1,9 @@
 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 px-6 pb-10">
   @for (event of eventsList; track $index) {
-  <app-event-card [event]="event"></app-event-card>
+  <app-event-card
+    [event]="event"
+    (click)="onEventClick(event.id)"
+  ></app-event-card>
+
   }
 </div>
