--- a/src/app/pages/event-view/event-view.component.html
+++ b/src/app/pages/event-view/event-view.component.html
@@ -1,3 +1,5 @@
+@if (event$ | async; as event) {
+
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
   <div
     class="flex flex-col lg:flex-row items-center justify-between space-y-4 lg:space-y-0"
@@ -12,6 +14,9 @@
     <div>
       <button class="btn btn-primary">Join Event</button>
     </div>
+    <button [routerLink]="['/', 'edit', event.id]" class="meetup-button">
+      edit
+    </button>
   </div>
 
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mt-8">
@@ -104,3 +109,5 @@
     </div>
   </div>
 </div>
+
+}
