--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,23 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.meetup-button {
+  @apply inline-flex cursor-pointer items-center justify-center rounded-lg bg-orange-600 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-orange-700   disabled:cursor-not-allowed disabled:bg-slate-500;
+  &.warning {
+    @apply bg-red-600 hover:bg-red-800 dark:focus:ring-red-800;
+  }
+  &.neutral {
+    @apply border border-gray-200 bg-white  text-gray-500  hover:bg-gray-100 hover:text-gray-900 focus:z-10 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white;
+  }
+}
+
+.meetup-input {
+  @apply w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500;
+  &:disabled {
+    @apply cursor-not-allowed bg-gray-100 placeholder:text-gray-100 dark:text-gray-400 dark:placeholder-gray-400;
+  }
+  &.has-error {
+    @apply border-red-500;
+  }
+}
