small naming fix

--- a/src/app/pages/event-editor/event-editor.component.html
+++ b/src/app/pages/event-editor/event-editor.component.html
@@ -2,10 +2,10 @@
   <h1></h1>
   <form [formGroup]="eventForm" class="flex w-full flex-col space-y-8">
     <div class="flex flex-col">
-      <label class="chefz-label mb-2"> name </label>
+      <label class="matchup-label mb-2"> name </label>
       <input
         placeholder="Event name"
-        class="chefz-input"
+        class="matchup-input"
         formControlName="name"
       />
     </div>
