--- a/src/app/pages/event-view/event-view.component.html
+++ b/src/app/pages/event-view/event-view.component.html
@@ -14,7 +14,7 @@
     <div>
       <button class="btn btn-primary">Join Event</button>
     </div>
-    <button [routerLink]="['/', 'edit', event.id]" class="meetup-button">
+    <button [routerLink]="['/', 'edit', event.id]" class="matchup-button ms-3">
       edit
     </button>
   </div>
