--- a/src/app/pages/home/components/banner/banner.component.html
+++ b/src/app/pages/home/components/banner/banner.component.html
@@ -5,7 +5,7 @@
     <h1
       class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl"
     >
-      We invest in the world’s potential
+      Create or join Sports events!
     </h1>
     <p
       class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48"
