--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,25 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-.meetup-button {
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,200,0,-25");
+// @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,200,0,0");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"); //Poppins
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"); //Noto Sans
+@import url("https://fonts.googleapis.com/css2?family=Anton&display=swap"); //Anton
+
+html,
+body {
+  @apply bg-white;
+  font-family: "Noto Sans";
+  margin: 0;
+  min-height: 100vh;
+  &.dark {
+    @apply bg-gray-900 text-white;
+  }
+}
+
+.matchup-button {
   @apply inline-flex cursor-pointer items-center justify-center rounded-lg bg-orange-600 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-orange-700   disabled:cursor-not-allowed disabled:bg-slate-500;
   &.warning {
     @apply bg-red-600 hover:bg-red-800 dark:focus:ring-red-800;
@@ -12,12 +30,74 @@
   }
 }
 
-.meetup-input {
+.matchup-badge {
+  @apply me-2 rounded bg-blue-100 px-2.5 py-0.5 text-sm font-medium text-blue-800 dark:bg-blue-900 dark:text-blue-300;
+  &.dark {
+    @apply bg-gray-100 text-gray-800;
+  }
+}
+
+.matchup-label {
+  @apply text-gray-900 dark:text-white;
+}
+
+.matchup-input {
   @apply w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500;
   &:disabled {
     @apply cursor-not-allowed bg-gray-100 placeholder:text-gray-100 dark:text-gray-400 dark:placeholder-gray-400;
   }
+  &.seamless {
+    @apply border-none bg-inherit p-0 focus:outline-none;
+    &.has-error {
+      @apply border border-solid border-red-500;
+    }
+  }
   &.has-error {
     @apply border-red-500;
   }
+}
+
+input {
+  @apply text-sm;
+}
+
+.matchup-form-error {
+  @apply -mb-4 text-sm capitalize text-red-600 dark:text-red-500;
+}
+
+.matchup-select {
+  @apply block  w-full rounded-lg border p-2.5 text-sm text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500;
+  &:not(.colorPicker) {
+    @apply block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500;
+  }
+  &.error {
+    @apply border-red-500 bg-red-50 text-red-900 placeholder-red-700  focus:border-red-500  focus:ring-red-500 dark:border-red-500 dark:text-red-500 dark:placeholder-red-500;
+    option {
+      @apply text-gray-900 dark:text-white;
+    }
+  }
+  &:disabled {
+    @apply cursor-not-allowed bg-gray-100 placeholder:text-gray-100 dark:text-gray-400 dark:placeholder-gray-400;
+  }
+}
+
+.matchup-textarea {
+  @apply block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500;
+  &.has-error {
+    @apply border-red-500;
+  }
+  &:disabled {
+    @apply cursor-not-allowed bg-gray-100 placeholder:text-gray-100 dark:text-gray-400 dark:placeholder-gray-400;
+  }
+}
+
+.matchup-chip {
+  @apply rounded-3xl bg-orange-500 px-4 py-2 text-white;
+  &.blue {
+    @apply bg-blue-500;
+  }
+}
+
+.matchup-underline {
+  @apply h-0.5 w-[120%] bg-orange-400;
 }
