--- a/src/app/pages/home/components/banner/banner.component.html
+++ b/src/app/pages/home/components/banner/banner.component.html
@@ -17,10 +17,10 @@
       class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0"
     >
       <a
-        href="#"
+        [routerLink]="['/', 'add']"
         class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900"
       >
-        Get started
+        Create your event
         <svg
           class="w-3.5 h-3.5 ms-2 rtl:rotate-180"
           aria-hidden="true"
