--- a/src/app/pages/home/components/banner/banner.component.html
+++ b/src/app/pages/home/components/banner/banner.component.html
@@ -7,6 +7,20 @@
     >
       Create or join Sports events!
     </h1>
+    <div class="absolute top-4 right-4">
+      <a
+        [routerLink]="['/', 'login']"
+        class="inline-flex justify-center items-center py-2 px-4 text-base font-medium text-center text-white rounded-lg bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 dark:focus:ring-green-900"
+      >
+        Login
+      </a>
+      <a
+        [routerLink]="['/', 'register']"
+        class="inline-flex justify-center items-center py-2 px-4 text-base font-medium text-center text-white rounded-lg bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 dark:focus:ring-green-900"
+      >
+        Resgister
+      </a>
+    </div>
     <p
       class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48"
     >
