fix log in / register design

--- a/src/app/pages/home/components/banner/banner.component.html
+++ b/src/app/pages/home/components/banner/banner.component.html
@@ -1,5 +1,5 @@
 <section
-  class="bg-center bg-no-repeat bg-[url('https://flowbite.s3.amazonaws.com/docs/jumbotron/conference.jpg')] bg-gray-700 bg-blend-multiply"
+  class="bg-center bg-no-repeat bg-[url('https://contents.mediadecathlon.com/p1972651/k$89ea178d1bccbb79521233a6c58dd8f3/1800x0/2226pt1840/3663xcr2664/Les-r%25C3%25A8gles-du-beachvolley.jpg?format=auto')] bg-gray-700 bg-blend-multiply"
 >
   <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
     <h1
@@ -7,25 +7,24 @@
     >
       Create or join Sports events!
     </h1>
-    <div class="absolute top-4 right-4">
+    <div class="absolute top-4 right-4 flex space-x-4">
       <a
         [routerLink]="['/', 'login']"
-        class="inline-flex justify-center items-center py-2 px-4 text-base font-medium text-center text-white rounded-lg bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 dark:focus:ring-green-900"
+        class=" inline-flex justify-center items-center py-2 px-4 text-white hover:text-green-500 font-medium text-base cursor-pointer transition duration-300"
       >
-        Login
+        Log in
       </a>
       <a
         [routerLink]="['/', 'register']"
-        class="inline-flex justify-center items-center py-2 px-4 text-base font-medium text-center text-white rounded-lg bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 dark:focus:ring-green-900"
+        class="inline-flex justify-center items-center py-2 px-4 text-base font-medium text-white rounded-lg bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 dark:focus:ring-green-900"
       >
-        Resgister
+        Register
       </a>
     </div>
     <p
       class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48"
     >
-      Here at Flowbite we focus on markets where technology, innovation, and
-      capital can unlock long-term value and drive economic growth.
+      Whether you're into soccer, basketball, or any sport in between, Mtachup connects you with others who share your passion. Join events happening near you or create your own and get active with fellow sports enthusiasts
     </p>
     <div
       class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0"
