implement delete event

--- a/src/app/pages/event-view/event-view.component.html
+++ b/src/app/pages/event-view/event-view.component.html
@@ -17,6 +17,9 @@
     <button [routerLink]="['/', 'edit', event.id]" class="matchup-button ms-3">
       edit
     </button>
+    <button (click)="deleteEvent(event)" class="matchup-button ms-3">
+      delete
+    </button>
   </div>
 
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mt-8">
