--- a/src/app/pages/home/components/event-grid/components/event-card/event-card.component.html
+++ b/src/app/pages/home/components/event-grid/components/event-card/event-card.component.html
@@ -18,10 +18,10 @@
       <mat-icon class="mr-1.5 text-gray-400">calendar_today</mat-icon>
       {{ event.date }}
     </div>
-    <div class="flex items-center text-gray-600 mb-2">
+    <!-- <div class="flex items-center text-gray-600 mb-2">
       <mat-icon class="mr-1.5 text-gray-400">location_on</mat-icon>
       {{ event.location }}
-    </div>
+    </div> -->
     <div class="flex items-center text-gray-600 mb-2">
       <mat-icon class="mr-1.5 text-gray-400">groups</mat-icon>
       {{ event.going }} going
