--- a/src/app/pages/home/components/event-grid/components/event-card/event-card.component.html
+++ b/src/app/pages/home/components/event-grid/components/event-card/event-card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hover:shadow-lg hover:scale-105 cursor-pointer transition-transform duration-300"
+  class="h-full max-w-sm bg-white border border-gray-200 rounded-lg shadow hover:shadow-lg hover:scale-105 cursor-pointer transition-transform duration-300"
 >
   <img
     class="rounded-t-lg w-full h-48 object-cover"
@@ -16,7 +16,8 @@
     </p>
     <div class="flex items-center text-gray-600 mb-2">
       <mat-icon class="mr-1.5 text-gray-400">calendar_today</mat-icon>
-      {{ event.date }}
+      {{ event.date | date: "shortDate" }} at
+      {{ event.date | date: "shortTime" }}
     </div>
     <!-- <div class="flex items-center text-gray-600 mb-2">
       <mat-icon class="mr-1.5 text-gray-400">location_on</mat-icon>
