--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -34,11 +34,12 @@
               >Your email</label
             >
             <input
+              formControlName="email"
               type="email"
               name="email"
               id="email"
               class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="name@company.com"
+              placeholder="name@gmail.com" 
               required=""
             />
           </div>
@@ -49,6 +50,7 @@
               >Password</label
             >
             <input
+            formControlName="password"
               type="password"
               name="password"
               id="password"
@@ -57,7 +59,7 @@
               required=""
             />
           </div>
-          <div class="flex items-center justify-between">
+          <!-- <div class="flex items-center justify-between">
             <div class="flex items-start">
               <div class="flex items-center h-5">
                 <input
@@ -79,16 +81,16 @@
               class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500"
               >Forgot password?</a
             >
-          </div>
+          </div> -->
           <button type="submit" class="matchup-button w-full">Sign in</button>
-          <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+          <!-- <p class="text-sm font-light text-gray-500 dark:text-gray-400">
             Don’t have an account yet?
             <a
               [routerLink]="['/register']"
               class="font-medium text-primary-600 hover:underline dark:text-primary-500"
               >Sign up</a
             >
-          </p>
+          </p> -->
         </form>
       </div>
     </div>
