add fav icon and logo

--- a/src/app/pages/home/components/banner/banner.component.html
+++ b/src/app/pages/home/components/banner/banner.component.html
@@ -1,61 +1,44 @@
-<section
-  class="bg-center bg-no-repeat bg-[url('https://contents.mediadecathlon.com/p1972651/k$89ea178d1bccbb79521233a6c58dd8f3/1800x0/2226pt1840/3663xcr2664/Les-r%25C3%25A8gles-du-beachvolley.jpg?format=auto')] bg-gray-700 bg-blend-multiply"
->
-  <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
-    <h1
-      class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl"
-    >
-      Create or join Sports events!
-    </h1>
-    <div class="absolute top-4 right-5 flex space-x-3">
-      <a
-        [routerLink]="['/', 'login']"
-        class=" inline-flex justify-center items-center py-2 px-4 text-white hover:text-green-500 font-medium text-base cursor-pointer transition duration-300"
-      >
-        Log in
+<header>
+  <section
+    class="bg-gray-700 bg-[url('https://contents.mediadecathlon.com/p1972651/k$89ea178d1bccbb79521233a6c58dd8f3/1800x0/2226pt1840/3663xcr2664/Les-r%25C3%25A8gles-du-beachvolley.jpg?format=auto')] bg-center bg-no-repeat bg-blend-multiply">
+    <header class="absolute left-0 top-0 p-3">
+      <a [routerLink]="['/']">
+        <img class="sm:h-18 h-14 w-auto md:h-20 lg:h-28" src="assets/images/m.png" alt="MatchUp Logo" />
       </a>
-      <a
-        [routerLink]="['/', 'register']"
-        class="inline-flex justify-center items-center py-2 px-4 text-base font-medium text-white rounded-lg bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 dark:focus:ring-green-900"
-      >
-        Register
-      </a>
+    </header>
+    <div class="mx-auto max-w-screen-xl px-4 py-24 text-center lg:py-56">
+      <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-white md:text-5xl lg:text-6xl">Create or join Sports events!</h1>
+      <div class="absolute right-5 top-4 flex space-x-3">
+        <a
+          [routerLink]="['/', 'login']"
+          class="inline-flex cursor-pointer items-center justify-center px-4 py-2 text-base font-medium text-white transition duration-300 hover:text-green-500">
+          Log in
+        </a>
+        <a
+          [routerLink]="['/', 'register']"
+          class="inline-flex items-center justify-center rounded-lg bg-green-700 px-4 py-2 text-base font-medium text-white hover:bg-green-800 focus:ring-4 focus:ring-green-300 dark:focus:ring-green-900">
+          Register
+        </a>
+      </div>
+      <p class="mb-8 text-lg font-normal text-gray-300 sm:px-16 lg:px-48 lg:text-xl">
+        Whether you're into soccer, basketball, or any sport in between, Matchup connects you with others who share your passion. Join events happening near you
+        or create your own and get active with fellow sports enthusiasts
+      </p>
+      <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
+        <a
+          [routerLink]="['/', 'add']"
+          class="inline-flex items-center justify-center rounded-lg bg-blue-700 px-5 py-3 text-center text-base font-medium text-white hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
+          Create your event
+          <svg class="ms-2 h-3.5 w-3.5 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9" />
+          </svg>
+        </a>
+        <a
+          class="inline-flex items-center justify-center rounded-lg border border-white px-5 py-3 text-center text-base font-medium text-white hover:bg-gray-100 hover:text-gray-900 focus:ring-4 focus:ring-gray-400 sm:ms-4"
+          href="#">
+          Learn more
+        </a>
+      </div>
     </div>
-    <p
-      class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48"
-    >
-      Whether you're into soccer, basketball, or any sport in between, Mtachup connects you with others who share your passion. Join events happening near you or create your own and get active with fellow sports enthusiasts
-    </p>
-    <div
-      class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0"
-    >
-      <a
-        [routerLink]="['/', 'add']"
-        class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900"
-      >
-        Create your event
-        <svg
-          class="w-3.5 h-3.5 ms-2 rtl:rotate-180"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 14 10"
-        >
-          <path
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M1 5h12m0 0L9 1m4 4L9 9"
-          />
-        </svg>
-      </a>
-      <a
-        href="#"
-        class="inline-flex justify-center hover:text-gray-900 items-center py-3 px-5 sm:ms-4 text-base font-medium text-center text-white rounded-lg border border-white hover:bg-gray-100 focus:ring-4 focus:ring-gray-400"
-      >
-        Learn more
-      </a>
-    </div>
-  </div>
-</section>
+  </section>
+</header>
