--- a/src/app/pages/home/components/event-grid/components/event-card/event-card.component.html
+++ b/src/app/pages/home/components/event-grid/components/event-card/event-card.component.html
@@ -1,25 +1,28 @@
 <div
   class="flex h-full cursor-pointer flex-row rounded-lg border border-gray-200 bg-white shadow transition-transform duration-300 hover:scale-105 hover:shadow-lg sm:flex-col">
-  <!-- Event image, positioned on the right for mobile and on top for larger screens -->
   <div class="order-last mr-3 mt-3 h-28 w-28 flex-none sm:order-first sm:mr-0 sm:mt-0 sm:h-48 sm:w-full">
-    <img [src]="event.image" class="sm: h-full w-full rounded-lg object-cover sm:rounded-b-none sm:rounded-t-lg" alt="Event Image" />
+    <img [src]="event.image" class="h-full w-full rounded-lg object-cover sm:rounded-b-none sm:rounded-t-lg" alt="Event Image" />
   </div>
 
-  <!-- Event information on the left for mobile and below the image for larger screens -->
-  <div class="p-3 sm:p-5">
-    <h5 class="mb-2 line-clamp-2 text-xl font-semibold text-gray-900">{{ event.name }}</h5>
-    <p class="mb-3 line-clamp-2 font-normal text-gray-700 dark:text-gray-400">{{ event.description }}</p>
-    <p class="mb-2 text-sm text-gray-600">Hosted by: {{ event.organizer }}</p>
-    <div class="mb-2 flex items-center text-gray-600">
-      <mat-icon class="mr-1.5 text-gray-400">calendar_today</mat-icon>
-      {{ event.date | date: "shortDate" }} at {{ event.date | date: "shortTime" }}
+  <div class="flex flex-grow flex-col justify-between p-3 sm:p-5">
+    <div>
+      <h5 class="mb-2 line-clamp-2 text-xl font-semibold text-gray-900">{{ event.name }}</h5>
+      <p class="mb-3 line-clamp-2 font-normal text-gray-700 dark:text-gray-400">{{ event.description }}</p>
+      <p class="mb-2 text-sm text-gray-600">Hosted by: {{ event.organizer }}</p>
     </div>
-    <div class="mb-2 flex items-center text-gray-600">
-      <mat-icon class="mr-1.5 line-clamp-1 text-gray-400">groups</mat-icon>
-      {{ event.going }} going
-      <span class="mx-1.5">•</span>
-      <mat-icon class="mr-1.5 line-clamp-1 text-gray-400">local_activity</mat-icon>
-      {{ event.price === 0 ? "Free" : "$" + event.price }}
+
+    <div class="mt-auto">
+      <div class="mb-2 flex items-center text-gray-600">
+        <mat-icon class="mr-1.5 text-gray-400">calendar_today</mat-icon>
+        {{ event.date | date: "shortDate" }} at {{ event.date | date: "shortTime" }}
+      </div>
+      <div class="mb-2 flex items-center text-gray-600">
+        <mat-icon class="mr-1.5 line-clamp-1 text-gray-400">groups</mat-icon>
+        {{ event.going }} going
+        <span class="mx-1.5">•</span>
+        <mat-icon class="mr-1.5 line-clamp-1 text-gray-400">local_activity</mat-icon>
+        {{ event.price === 0 ? "Free" : "$" + event.price }}
+      </div>
     </div>
   </div>
 </div>
