--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -7,7 +7,7 @@
     <div class="w-full rounded-lg bg-white shadow sm:max-w-md md:mt-0 xl:p-0 dark:border dark:border-gray-700 dark:bg-gray-800">
       <div class="space-y-4 p-6 sm:p-8 md:space-y-6">
         <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">Create an account</h1>
-        <form [formGroup]="registerForm" (click)="register()" class="space-y-4 md:space-y-6" action="#">
+        <form [formGroup]="registerForm" (ngSubmit)="register()" class="space-y-4 md:space-y-6">
           <div>
             <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white" for="email">Your email</label>
             <input
@@ -17,8 +17,14 @@
               type="email"
               name="email"
               placeholder="name@gmail.com"
-              required="" />
+              required />
+            @if (email?.invalid && email?.touched) {
+            <div class="text-red-500">
+              @if (email?.errors?.['required']) { <span>Email is required.</span> } @if (email?.errors?.['email']) { <span>Email has an invalid format.</span> }
+            </div>
+            }
           </div>
+
           <div>
             <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white" for="password">Password</label>
             <input
@@ -28,19 +34,30 @@
               type="password"
               name="password"
               placeholder="••••••••"
-              required="" />
+              required />
+            @if (password?.invalid && password?.touched) {
+            <div class="text-red-500">
+              @if (password?.errors?.['required']) { <span>Password is required.</span> } @if (password?.errors?.['minlength']) {
+              <span>Password must be at least 8 characters long.</span> }
+            </div>
+            }
           </div>
+
           <div>
             <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white" for="confirm-password">Confirm password</label>
             <input
               id="confirm-password"
               class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
               formControlName="confirmPassword"
-              type="confirm-password"
+              type="password"
               name="confirm-password"
               placeholder="••••••••"
-              required="" />
+              required />
+            @if (confirmPassword?.invalid && confirmPassword?.touched) {
+            <div class="text-red-500">@if (registerForm.errors?.['notSame']) { <span>Passwords do not match.</span> }</div>
+            }
           </div>
+
           <div class="flex items-start">
             <div class="flex h-5 items-center">
               <input
@@ -48,15 +65,18 @@
                 class="focus:ring-3 focus:ring-primary-300 dark:focus:ring-primary-600 h-4 w-4 rounded border border-gray-300 bg-gray-50 dark:border-gray-600 dark:bg-gray-700 dark:ring-offset-gray-800"
                 aria-describedby="terms"
                 type="checkbox"
-                required="" />
+                required />
             </div>
             <div class="ml-3 text-sm">
               <label class="font-light text-gray-500 dark:text-gray-300" for="terms"
-                >I accept the <a class="text-primary-600 dark:text-primary-500 font-medium hover:underline" href="#">Terms and Conditions</a></label
-              >
+                >I accept the
+                <a class="text-primary-600 dark:text-primary-500 font-medium hover:underline" href="#">Terms and Conditions</a>
+              </label>
             </div>
           </div>
-          <button class="matchup-button w-full" type="submit">Create an account</button>
+
+          <button [disabled]="registerForm.invalid" class="matchup-button w-full" type="submit">Create an account</button>
+
           <p class="text-sm font-light text-gray-500 dark:text-gray-400">
             Already have an account?
             <a [routerLink]="['/login']" class="text-primary-600 dark:text-primary-500 font-medium hover:underline">Login here</a>
