--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -7,6 +7,7 @@
     <div class="w-full rounded-lg bg-white shadow sm:max-w-md md:mt-0 xl:p-0 dark:border dark:border-gray-700 dark:bg-gray-800">
       <div class="space-y-4 p-6 sm:p-8 md:space-y-6">
         <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">Create an account</h1>
+
         <form [formGroup]="registerForm" (ngSubmit)="register()" class="space-y-4 md:space-y-6">
           <div>
             <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white" for="email">Your email</label>
@@ -15,12 +16,16 @@
               class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
               formControlName="email"
               type="email"
-              name="email"
-              placeholder="name@gmail.com"
+              placeholder="example@gmail.com"
               required />
             @if (email?.invalid && email?.touched) {
             <div class="text-red-500">
-              @if (email?.errors?.['required']) { <span>Email is required.</span> } @if (email?.errors?.['email']) { <span>Email has an invalid format.</span> }
+              @if (email?.errors?.['required']) { <span>Email is required.</span> } @if (email?.errors?.['pattern']) {
+              <span>Please enter a valid email address.</span> }
+            </div>
+            }@if (firebaseError) {
+            <div class="text-red-500">
+              <p>{{ firebaseError }}</p>
             </div>
             }
           </div>
@@ -32,7 +37,6 @@
               class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
               formControlName="password"
               type="password"
-              name="password"
               placeholder="••••••••"
               required />
             @if (password?.invalid && password?.touched) {
@@ -47,14 +51,13 @@
             <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white" for="confirm-password">Confirm password</label>
             <input
               id="confirm-password"
+              (input)="registerForm.updateValueAndValidity()"
               class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
               formControlName="confirmPassword"
               type="password"
-              name="confirm-password"
-              placeholder="••••••••"
               required />
-            @if (confirmPassword?.invalid && confirmPassword?.touched) {
-            <div class="text-red-500">@if (registerForm.errors?.['notSame']) { <span>Passwords do not match.</span> }</div>
+            @if (confirmPassword?.touched && registerForm.errors?.['notSame']) {
+            <div class="text-red-500"><span>Passwords do not match.</span></div>
             }
           </div>
 
@@ -67,12 +70,12 @@
                 type="checkbox"
                 required />
             </div>
-            <div class="ml-3 text-sm">
-              <label class="font-light text-gray-500 dark:text-gray-300" for="terms"
-                >I accept the
+            <!-- <div class="ml-3 text-sm">
+              <label class="font-light text-gray-500 dark:text-gray-300" for="terms">
+                I accept the
                 <a class="text-primary-600 dark:text-primary-500 font-medium hover:underline" href="#">Terms and Conditions</a>
               </label>
-            </div>
+            </div> -->
           </div>
 
           <button [disabled]="registerForm.invalid" class="matchup-button w-full" type="submit">Create an account</button>
