--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,64 +1,47 @@
 <section class="bg-gray-50 dark:bg-gray-900">
-  <div
-    class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0"
-  >
-    <a
-      href="#"
-      class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
-    >
-      <img
-        class="w-8 h-8 mr-2"
-        src="https://via.placeholder.com/150"
-        alt="logo"
-      />
+  <div class="mx-auto flex flex-col items-center justify-center px-6 py-8 md:h-screen lg:py-0">
+    <a class="mb-6 flex items-center text-2xl font-semibold text-gray-900 dark:text-white" href="#">
+      <img class="mr-2 h-8 w-8" src="https://via.placeholder.com/150" alt="logo" />
       Match UP
     </a>
-    <div
-      class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
-    >
-      <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-        <h1
-          class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white"
-        >
-          Sign in to your account
-        </h1>
-        <form
-          [formGroup]="loginForm"
-          class="space-y-4 md:space-y-6"
-          (submit)="login()"
-        >
+    <div class="w-full rounded-lg bg-white shadow sm:max-w-md md:mt-0 xl:p-0 dark:border dark:border-gray-700 dark:bg-gray-800">
+      <div class="space-y-4 p-6 sm:p-8 md:space-y-6">
+        <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">Sign in to your account</h1>
+        <form [formGroup]="loginForm" (submit)="login()" class="space-y-4 md:space-y-6">
           <div>
-            <label
-              for="email"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-              >Your email</label
-            >
+            <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white" for="email">Your email</label>
             <input
+              id="email"
+              class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
               formControlName="email"
               type="email"
               name="email"
-              id="email"
-              class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="name@gmail.com" 
-              required=""
-            />
+              placeholder="name@gmail.com"
+              required="" />
+            @if (loginForm.controls.email?.touched && loginForm.controls.email?.invalid) {
+            <div class="text-red-500">
+              @if (loginForm.controls.email.errors?.['required']) { <span>Email is required.</span> } @if (loginForm.controls.email.errors?.['email']) {
+              <span>Invalid email format.</span> }
+            </div>
+            }
           </div>
           <div>
-            <label
-              for="password"
-              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-              >Password</label
-            >
+            <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white" for="password">Password</label>
             <input
-            formControlName="password"
+              id="password"
+              class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
+              formControlName="password"
               type="password"
               name="password"
-              id="password"
               placeholder="••••••••"
-              class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              required=""
-            />
+              required="" />
+            @if (loginForm.controls.password?.touched && loginForm.controls.password?.invalid) {
+            <div class="text-red-500"><span>Password is required.</span></div>
+            }
           </div>
+          @if (wrongCredentials()) {
+          <div class="text-red-500"><span>Invalid email or password.</span></div>
+          }
           <!-- <div class="flex items-center justify-between">
             <div class="flex items-start">
               <div class="flex items-center h-5">
@@ -82,15 +65,11 @@
               >Forgot password?</a
             >
           </div> -->
-          <button type="submit" class="matchup-button w-full">Sign in</button>
-          <!-- <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+          <button [disabled]="loginForm.invalid" class="matchup-button w-full" type="submit">Login</button>
+          <p class="text-sm font-light text-gray-500 dark:text-gray-400">
             Don’t have an account yet?
-            <a
-              [routerLink]="['/register']"
-              class="font-medium text-primary-600 hover:underline dark:text-primary-500"
-              >Sign up</a
-            >
-          </p> -->
+            <a [routerLink]="['/register']" class="text-primary-600 dark:text-primary-500 font-medium hover:underline">Register</a>
+          </p>
         </form>
       </div>
     </div>
