--- a/src/app/pages/event-editor/event-editor.component.html
+++ b/src/app/pages/event-editor/event-editor.component.html
@@ -1,11 +1,12 @@
+<header>
+  <section
+    class="bg-gradient-mask bg-gray-700 bg-[url('https://contents.mediadecathlon.com/p1972651/k$89ea178d1bccbb79521233a6c58dd8f3/1800x0/2226pt1840/3663xcr2664/Les-r%25C3%25A8gles-du-beachvolley.jpg?format=auto')] bg-center bg-no-repeat bg-blend-multiply">
+    <app-navbar></app-navbar>
+    <div class="mx-auto max-w-screen-xl px-4 py-10 text-center md:py-14 lg:py-20"></div>
+  </section>
+</header>
 <div class="mx-auto max-w-4xl py-8">
   <h1 class="text-2xl font-semibold text-gray-800">{{ isEditing ? "Edit Event" : "Create Event" }}</h1>
-
-  <header class="absolute left-0 top-0 p-3">
-    <a [routerLink]="['/']">
-      <img class="sm:h-18 h-14 w-auto md:h-20 lg:h-28" src="assets/images/m.png" alt="MatchUp Logo" />
-    </a>
-  </header>
 
   <form [formGroup]="eventForm" (submit)="saveEvent()" class="mt-6 space-y-6">
     <div class="flex flex-col">
