get fav events by user and events created by user

--- a/src/app/pages/event-view/event-view.component.html
+++ b/src/app/pages/event-view/event-view.component.html
@@ -21,7 +21,10 @@
     <div>
       <button (click)="joinEvent(event)" class="btn btn-primary">Join Event</button>
     </div>
-
+    }@else {
+    <div>
+      <button (click)="leaveEvent(event)" class="btn btn-secondary">Leave Event</button>
+    </div>
     } @if (userIsOwner$ | async) {
     <button [routerLink]="['/', 'edit', event.id]" class="matchup-button ms-3">edit</button>
     <button (click)="deleteEvent(event)" class="matchup-button ms-3">delete</button>
